overlays/uksouth-sandbox/default/api2-docs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: api2-docs-basicauth
  name: api2-docs.${cluster_name}.${location}.bink.sh
  namespace: default
spec:
  rules:
    - host: api2-docs.${cluster_name}.${location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: api2-redoc
                port:
                  number: 80
          - path: /changelog.html
            pathType: Exact
            backend:
              service:
                name: api2-redoc
                port:
                  number: 80
          - path: /appendix.html
            pathType: Exact
            backend:
              service:
                name: api2-redoc
                port:
                  number: 80
  tls:
    - hosts:
        - api2-docs.${cluster_name}.${location}.bink.sh
